# image-mp4-converter

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  image-mp4-converter.service  pyproject.toml  run.sh
effects/: pan_bottom_left_to_top_right.json  pan_bottom_right_to_top_left.json  pan_left_to_right.json  pan_right_to_left.json  pan_top_left_to_bottom_right.json  pan_top_right_to_bottom_left.json  zoom_in_center.json  zoom_out_center.json
static/: app.js  index.html  styles.css
