[project]
name = "still-motion-mp4"
version = "0.1.0"
description = "Convert still images into motion MP4 videos with selectable effects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-multipart==0.0.9",
]

[tool.uv]
package = false
